[package]
name = "reify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
#ash = "0.32"
env_logger = "0.8"
erupt = "0.19"
log = "0.4"
parking_lot = "0.11"
raw-window-handle = "0.3"
shaderc = "0.7"
thread_local = "1"
vk-mem = "0.2"
winit = "0.25"

[profile.release]
debug = 1
